--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,9 @@ jobs:
           uses: actions/setup-go@v5
           with:
             go-version: "1.23.0"
+        - name: Install staticheck
+          run: go install honnef.co/go/tools/cmd/staticcheck@latest
         - name: Check formatting
           run: test -z "$(go fmt ./...)"
+        - name: Run staticheck
+          run: staticcheck ./...
