--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,10 +37,13 @@ jobs:
       - name: Build app
         run: ./scripts/buildprod.sh
       
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
       
       - name: Build and Push Docker Image
         run: |
