--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,4 +47,4 @@ jobs:
       
       - name: Build and Push Docker Image
         run: |
-          gcloud builds submit --tag us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/notely-ar-repo/notely:${{ github.sha }} .
+          gcloud builds submit --tag us-central1-docker.pkg.dev/notely-470018/us-central1/notely-ar-repo/notely?hl=fr&project=notely-470018 .
